--- a/index.html
+++ b/index.html
@@ -6,11 +6,68 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ecommerce-front</title>
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/95f057a988.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 
+    <header>
+        <div class="container">
+            <div class="logo">
+                <!--Caja uno-->
+                <a href="#" class="logo-img">
+
+                    <img src="https://http2.mlstatic.com/frontend-assets/ui-navigation/5.18.9/mercadolibre/logo__large_plus.png" alt="Mercado Libre" id="logo-mc">
+                </a>
+
+            </div>
+            <!--Caja dos-->
+            <div class="busqueda">
+                <div class="input-busqueda">
+                    <input type="text" placeholder="Buscar productos, marcas y mas..." id="input-busqueda">
+                    <input type="checkbox" id="input-checkbox">
+                </div>
+                <img src="img/suscribete.png" alt="suscribete" id="img-suscribete">
+            </div>
+
+            <!--Caja tres-->
+            <div class="caja-tres">
+                <div class="nav-menu">
+                    <ul>
+                        <li class="nav-menu-item">
+                            <a href="#">
+                                <img src="img/aquí.png" alt="Ubicación" id="ubicacion">
+                            </a>
+                            <a href="#">
+                                <span class="nav-menu-cp-send">Enviar a</span>
+                                <span class="nav-menu-link-cp"> Capital Federal</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+
+                <ul class="nav-menu-list">
+                    <li class="nav-menu-item"><a href="#" class="nav-menu-categories-link">Categorías</a></li>
+                    <li class="nav-menu-item"><a href="#" class="nav-menu-item-link">Ofertas</a></li>
+                    <li class="nav-menu-item"><a href="#" class="nav-menu-item-link">Historial</a></li>
+                    <li class="nav-menu-item"><a href="#" class="nav-menu-item-link">Supermercado</a></li>
+                    <li class="nav-menu-item"><a href="#" class="nav-menu-item-link">Moda</a></li>
+                    <li class="nav-menu-item"><a href="#" class="nav-menu-item-link">Vender</a></li>
+                    <li class="nav-menu-item"><a href="#" class="nav-menu-item-link">Ayuda</a></li>
+                </ul>
+
+
+                <div class="usuarios">
+                    <li class="nav-menu-usuarios"><a href="#" class="nav-menu-usuarios-link">Creá tu cuenta</a></li>
+                    <li class="nav-menu-usuarios"><a href="#" class="nav-menu-usuarios-link">Ingresá</a></li>
+                    <li class="nav-menu-usuarios"><a href="#" class="nav-menu-usuarios-link">Mis compras</a></li>
+                    <img src="img/carrito.png" alt="Carrito de compras" id="carrito">
+                </div>
+            </div>
+        </div>
+    </header>
     <script src="index.js"></script>
 </body>
 
