--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
                             <a href="#">
                                 <img src="img/aquí.png" alt="Ubicación" id="ubicacion">
                             </a>
-                            <a href="#">
+                            <a href="#" id="enviar-capital">
                                 <span class="nav-menu-cp-send">Enviar a</span>
+                                <br>
                                 <span class="nav-menu-link-cp"> Capital Federal</span>
                             </a>
                         </li>
