--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
                 <div class="input-busqueda">
                     <input type="text" placeholder="Buscar productos, marcas y mas..." id="input-busqueda">
                     <input type="checkbox" id="input-checkbox">
+                    <p class="input-hp">Solo en HP Tienda Oficial oficial</p>
                 </div>
-                <img src="img/suscribete.png" alt="suscribete" id="img-suscribete">
+                <a href="#"><img src="img/suscribete.png" alt="suscribete" id="img-suscribete"></a>
             </div>
 
             <!--Caja tres-->
@@ -64,7 +65,7 @@
                     <li class="nav-menu-usuarios"><a href="#" class="nav-menu-usuarios-link">Creá tu cuenta</a></li>
                     <li class="nav-menu-usuarios"><a href="#" class="nav-menu-usuarios-link">Ingresá</a></li>
                     <li class="nav-menu-usuarios"><a href="#" class="nav-menu-usuarios-link">Mis compras</a></li>
-                    <img src="img/carrito.png" alt="Carrito de compras" id="carrito">
+                    <a href="#"><img src="img/carrito.png" alt="Carrito de compras" id="carrito"></a>
                 </div>
             </div>
         </div>
