--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                     <input type="text" placeholder="Buscar productos, marcas y mas..." id="input-busqueda">
                     <input type="checkbox" id="input-checkbox">
                     <p class="input-hp">Solo en HP Tienda Oficial oficial</p>
+                    <a href="#"><img src="img/lupa.png" id="lupa"></a>
                 </div>
                 <a href="#"><img src="img/suscribete.png" alt="suscribete" id="img-suscribete"></a>
             </div>
