--- a/index.html
+++ b/index.html
@@ -71,6 +71,13 @@
             </div>
         </div>
     </header>
+    <main>
+        <div class="banner"></div>
+        <div class="perfil-hp">
+
+        </div>
+
+    </main>
     <script src="index.js"></script>
 </body>
 
