se agregan productos y categorias

--- a/index.html
+++ b/index.html
@@ -74,6 +74,59 @@
     <main>
         <div class="banner"></div>
         <div class="perfil-hp">
+            <!--Para productos y categorías-->
+            <div class="main-productos-categorias">
+
+                <div class="categorias">
+
+                </div>
+
+                <div class="productos">
+                    <div class="producto-aleatorio"></div>
+                    <div class="producto-aleatorio"></div>
+                    <div class="producto-aleatorio"></div>
+                    <div class="producto-aleatorio"></div>
+                    <div class="producto-aleatorio"></div>
+                    <div class="producto-aleatorio"></div>
+                    <div class="producto-aleatorio"></div>
+                    <div class="producto-aleatorio"></div>
+                    <div class="producto-aleatorio"></div>
+                    <div class="producto-aleatorio"></div>
+                    <div class="producto-aleatorio"></div>
+                    <div class="producto-aleatorio"></div>
+                    <div class="producto-aleatorio"></div>
+                    <div class="producto-aleatorio"></div>
+                    <div class="producto-aleatorio"></div>
+                    <div class="producto-aleatorio"></div>
+                    <div class="producto-aleatorio"></div>
+                    <div class="producto-aleatorio"></div>
+                    <div class="producto-aleatorio"></div>
+                    <div class="producto-aleatorio"></div>
+                    <div class="producto-aleatorio"></div>
+                    <div class="producto-aleatorio"></div>
+                    <div class="producto-aleatorio"></div>
+                    <div class="producto-aleatorio"></div>
+                    <div class="producto-aleatorio"></div>
+                    <div class="producto-aleatorio"></div>
+                    <div class="producto-aleatorio"></div>
+                    <div class="producto-aleatorio"></div>
+                    <div class="producto-aleatorio"></div>
+                    <div class="producto-aleatorio"></div>
+                    <div class="producto-aleatorio"></div>
+                    <div class="producto-aleatorio"></div>
+                    <div class="producto-aleatorio"></div>
+                    <div class="producto-aleatorio"></div>
+                    <div class="producto-aleatorio"></div>
+                    <div class="producto-aleatorio"></div>
+                    <div class="producto-aleatorio"></div>
+                    <div class="producto-aleatorio"></div>
+                    <div class="producto-aleatorio"></div>
+                    <div class="producto-aleatorio"></div>
+                    <div class="producto-aleatorio"></div>
+                    <div class="producto-aleatorio"></div>
+                </div>
+            </div>
+
 
         </div>
 
