--- a/index.html
+++ b/index.html
@@ -73,62 +73,71 @@
     </header>
     <main>
         <div class="banner"></div>
-        <div class="perfil-hp">
-            <!--Para productos y categorías-->
-            <div class="main-productos-categorias">
+        <div class="perfil-hp"></div>
 
-                <div class="categorias">
+        <!--Para productos y categorías-->
+        <div class="main-productos-categorias">
 
+            <!--categorias-->
+            <div class="categorias">
+                <div class="title">
+                    <h3>Tiendas oficiales</h3>
+                    <h1>HP TIENDA OFICIAL</h1>
+                    <H2>272 result</H2>
                 </div>
-
-                <div class="productos">
-                    <div class="producto-aleatorio"></div>
-                    <div class="producto-aleatorio"></div>
-                    <div class="producto-aleatorio"></div>
-                    <div class="producto-aleatorio"></div>
-                    <div class="producto-aleatorio"></div>
-                    <div class="producto-aleatorio"></div>
-                    <div class="producto-aleatorio"></div>
-                    <div class="producto-aleatorio"></div>
-                    <div class="producto-aleatorio"></div>
-                    <div class="producto-aleatorio"></div>
-                    <div class="producto-aleatorio"></div>
-                    <div class="producto-aleatorio"></div>
-                    <div class="producto-aleatorio"></div>
-                    <div class="producto-aleatorio"></div>
-                    <div class="producto-aleatorio"></div>
-                    <div class="producto-aleatorio"></div>
-                    <div class="producto-aleatorio"></div>
-                    <div class="producto-aleatorio"></div>
-                    <div class="producto-aleatorio"></div>
-                    <div class="producto-aleatorio"></div>
-                    <div class="producto-aleatorio"></div>
-                    <div class="producto-aleatorio"></div>
-                    <div class="producto-aleatorio"></div>
-                    <div class="producto-aleatorio"></div>
-                    <div class="producto-aleatorio"></div>
-                    <div class="producto-aleatorio"></div>
-                    <div class="producto-aleatorio"></div>
-                    <div class="producto-aleatorio"></div>
-                    <div class="producto-aleatorio"></div>
-                    <div class="producto-aleatorio"></div>
-                    <div class="producto-aleatorio"></div>
-                    <div class="producto-aleatorio"></div>
-                    <div class="producto-aleatorio"></div>
-                    <div class="producto-aleatorio"></div>
-                    <div class="producto-aleatorio"></div>
-                    <div class="producto-aleatorio"></div>
-                    <div class="producto-aleatorio"></div>
-                    <div class="producto-aleatorio"></div>
-                    <div class="producto-aleatorio"></div>
-                    <div class="producto-aleatorio"></div>
-                    <div class="producto-aleatorio"></div>
-                    <div class="producto-aleatorio"></div>
-                </div>
+                <div class="llegan-hoy"></div>
             </div>
 
 
+            <!--productos-->
+            <div class="productos">
+                <div class="producto-aleatorio"></div>
+                <div class="producto-aleatorio"></div>
+                <div class="producto-aleatorio"></div>
+                <div class="producto-aleatorio"></div>
+                <div class="producto-aleatorio"></div>
+                <div class="producto-aleatorio"></div>
+                <div class="producto-aleatorio"></div>
+                <div class="producto-aleatorio"></div>
+                <div class="producto-aleatorio"></div>
+                <div class="producto-aleatorio"></div>
+                <div class="producto-aleatorio"></div>
+                <div class="producto-aleatorio"></div>
+                <div class="producto-aleatorio"></div>
+                <div class="producto-aleatorio"></div>
+                <div class="producto-aleatorio"></div>
+                <div class="producto-aleatorio"></div>
+                <div class="producto-aleatorio"></div>
+                <div class="producto-aleatorio"></div>
+                <div class="producto-aleatorio"></div>
+                <div class="producto-aleatorio"></div>
+                <div class="producto-aleatorio"></div>
+                <div class="producto-aleatorio"></div>
+                <div class="producto-aleatorio"></div>
+                <div class="producto-aleatorio"></div>
+                <div class="producto-aleatorio"></div>
+                <div class="producto-aleatorio"></div>
+                <div class="producto-aleatorio"></div>
+                <div class="producto-aleatorio"></div>
+                <div class="producto-aleatorio"></div>
+                <div class="producto-aleatorio"></div>
+                <div class="producto-aleatorio"></div>
+                <div class="producto-aleatorio"></div>
+                <div class="producto-aleatorio"></div>
+                <div class="producto-aleatorio"></div>
+                <div class="producto-aleatorio"></div>
+                <div class="producto-aleatorio"></div>
+                <div class="producto-aleatorio"></div>
+                <div class="producto-aleatorio"></div>
+                <div class="producto-aleatorio"></div>
+                <div class="producto-aleatorio"></div>
+                <div class="producto-aleatorio"></div>
+                <div class="producto-aleatorio"></div>
+            </div>
         </div>
+
+
+
 
     </main>
     <script src="index.js"></script>
