avance de categorias

--- a/index.html
+++ b/index.html
@@ -81,11 +81,67 @@
             <!--categorias-->
             <div class="categorias">
                 <div class="title">
-                    <h3>Tiendas oficiales</h3>
-                    <h1>HP TIENDA OFICIAL</h1>
-                    <H2>272 result</H2>
+                    <a href="#">
+                        <p>Tiendas oficiales</p>
+                    </a>
+                    <h3>HP TIENDA OFICIAL</h3>
+                    <p>272 result</p>
                 </div>
-                <div class="llegan-hoy"></div>
+                <div class="llegan-hoy">
+                    <p>Llegan hoy</p>
+                    <div class="deslizar">
+                        <div class="boton"></div>
+                    </div>
+                </div>
+                <div class="llegan-hoy-full">
+                    <div class="full">
+                        <div class="full-envios">
+                            <img src="img/full.svg" alt="" id="img-full">
+                            <p id="par">te ahorras envios</p>
+                        </div>
+                        <p>Con tu carrito de compras</p>
+                    </div>
+                    <div class="deslizar">
+                        <div class="boton"></div>
+                    </div>
+                </div>
+                <div class="llegan-hoy-envio">
+                    <p>Envío gratis</p>
+                    <div class="deslizar">
+                        <div class="boton"></div>
+                    </div>
+                </div>
+                <div class="categorias-seccion">
+                    <h3>Categorías</h3>
+                    <p>Computación (275)</p>
+                    <p>Electrónica, Audio y Video (2)</p>
+                </div>
+
+                <div class="costo-de-envio">
+                    <h3>Costo de envío</h3>
+                    <p>Gratis (238)</p>
+                </div>
+
+                <div class="tiempo-de-entrega">
+                    <h3>Tiempo de entrega</h3>
+                    <p>Llega en menos de 24 hs (16)</p>
+                </div>
+
+                <div class="Precio-seccion">
+                    <h3>Precio</h3>
+                    <p>Hasta $6.000 (90)</p>
+                    <p>$6.000 a $20.000 (92)</p>
+                    <p>Más de $20.000 (95)</p>
+                    <form class="minimo-maximo">
+                        <input type="text" placeholder="Mínimo" id="minimo">
+                        <div class="linea"></div>
+                        <input type="text" placeholder="Máximo" id="maximo">
+                        <div class="circulo">
+                            <div class="flecha"></div>
+                        </div>
+                    </form>
+                </div>
+
             </div>
 
 
