casi terminando categorias

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                             <img src="img/full.svg" alt="" id="img-full">
                             <p id="par">te ahorras envios</p>
                         </div>
-                        <p>Con tu carrito de compras</p>
+                        <p id="p-full">Con tu carrito de compras</p>
                     </div>
                     <div class="deslizar">
                         <div class="boton"></div>
@@ -140,6 +140,35 @@
                             <div class="flecha"></div>
                         </div>
                     </form>
+                </div>
+
+                <div class="descuentos">
+                    <h3>Descuentos</h3>
+                    <p>Desde 5% OFF (20)</p>
+                    <P>Desde 10% OFF (15)</p>
+                    <P>Desde 10% OFF (12)</p>
+                    <P>Desde 10% OFF (9)</p>
+                    <P>Desde 10% OFF (5)</p>
+                    <P>Desde 10% OFF (3)</p>
+                </div>
+
+                <div class="ubicacion">
+                    <h3>Ubicación</h3>
+                    <p>Capital Federal (264)</p>
+                    <p>Bs.As. G.B.A Oeste (13)</p>
+                </div>
+
+                <div class="pago">
+                    <h3>Pago</h3>
+                    <p>Sin Interes (36)</p>
+                </div>
+
+                <div class="tipo-de-entrega">
+                    <h3>Tipo de entrega</h3>
+                    <div class="entrega-envios">
+                        <img src="img/full.svg" alt="" id="img-full">
+                        <p>(16)</p>
+                    </div>
                 </div>
 
             </div>
