--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                 </ul>
 
 
+
                 <div class="usuarios">
                     <li class="nav-menu-usuarios"><a href="#" class="nav-menu-usuarios-link">Creá tu cuenta</a></li>
                     <li class="nav-menu-usuarios"><a href="#" class="nav-menu-usuarios-link">Ingresá</a></li>
@@ -176,7 +177,31 @@
 
             <!--productos-->
             <div class="productos">
-                <div class="producto-aleatorio"></div>
+                <div class="producto-aleatorio">
+                    <div class="img-primer-producto"></div>
+                    <div class="linea-producto"></div>
+                    <div class="descripcion-primer-producto">
+                        <div class="precio-producto-tachado">
+                            <p>$99.999</p>
+                        </div>
+                        <div class="precio-producto">
+                            <p>$79.999</p>
+                            <p id="descuento-producto"> 20% OFF</p>
+                        </div>
+                        <div class="off-mercado-credito">
+                            <p>5% OFF con Mercado Crédito</p>
+                        </div>
+                        <div class="llega-gratis-hoy">
+                            <p>Llega gratis Hoy</p>
+                            <img src="img/full.svg" alt="">
+                        </div>
+                        <div class="prospecto-producto">
+                            <p>Notebook HP 14-cf2533la plata natural <br>14", Intel Core i3 10110U 4GB de RAM...</p>
+                        </div>
+
+
+                    </div>
+                </div>
                 <div class="producto-aleatorio"></div>
                 <div class="producto-aleatorio"></div>
                 <div class="producto-aleatorio"></div>
