--- a/index.html
+++ b/index.html
@@ -1270,12 +1270,48 @@
                     </div>
                 </div>
             </div>
+            <!--Termina Productos-->
+
+
+        </div>
+        <div class="pie-productos">
+            <img src="img/alert.svg" id="alert">
+            <p> El envío gratis está sujeto al peso, precio y la distancia del envío.</p>
+        </div>
+
+        <div class="numeros-paginas">
+            <p id="numeros-paginas-uno">1</p>
+            <p> de 7</p>
+            <div class="siguiente">
+                <p>Siguiente</p>
+
+            </div>
         </div>
 
 
-
-
     </main>
+
+    <div class="info-footer">
+        <p>Más información</p>
+    </div>
+
+    <footer class="pie-de-pagina">
+        <div class="menu-pie-pagina">
+            <li><a href="#">Trabajá con nosotros</a></li>
+            <li><a href="#">Términos y condiciones</a></li>
+            <li><a href="#">Cómo cuidamos tu privacidad</a></li>
+            <li><a href="#">Información al usuario financiero</a></li>
+            <li><a href="#">Ayuda</a></li>
+            <li><a href="#">Defensa del Consumidor</a></li>
+            <li><a href="#">Información sobre seguros</a></li>
+        </div>
+        <div class="Derechos-reservados">
+            <p>Copyright © 1999-2022 MercadoLibre S.R.L</p>
+            <p>Av. Caseros 3039, Piso 2, CP 1264, Parque Patricios, CABA</p>
+        </div>
+    </footer>
+
+
     <script src="index.js"></script>
 </body>
 
