filtro para productos

--- a/index.html
+++ b/index.html
@@ -1297,15 +1297,15 @@
 
     <footer class="pie-de-pagina">
         <div class="menu-pie-pagina">
-            <li><a href="#">Trabajá con nosotros</a></li>
-            <li><a href="#">Términos y condiciones</a></li>
-            <li><a href="#">Cómo cuidamos tu privacidad</a></li>
-            <li><a href="#">Información al usuario financiero</a></li>
-            <li><a href="#">Ayuda</a></li>
-            <li><a href="#">Defensa del Consumidor</a></li>
-            <li><a href="#">Información sobre seguros</a></li>
+            <li><a class="footer-menu" href="#">Trabajá con nosotros</a></li>
+            <li><a class="footer-menu" href="#">Términos y condiciones</a></li>
+            <li><a class="footer-menu" href="#">Cómo cuidamos tu privacidad</a></li>
+            <li><a class="footer-menu" href="#">Información al usuario financiero</a></li>
+            <li><a class="footer-menu" href="#">Ayuda</a></li>
+            <li><a class="footer-menu" href="#">Defensa del Consumidor</a></li>
+            <li><a class="footer-menu" href="#">Información sobre seguros</a></li>
         </div>
-        <div class="Derechos-reservados">
+        <div class="derechos-reservados">
             <p>Copyright © 1999-2022 MercadoLibre S.R.L</p>
             <p>Av. Caseros 3039, Piso 2, CP 1264, Parque Patricios, CABA</p>
         </div>
