filtro para productos mas retoques

--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
         <div class="banner"></div>
         <div class="perfil-hp"></div>
 
+
+
         <!--Para productos y categorías-->
         <div class="main-productos-categorias">
 
@@ -1310,9 +1312,12 @@
             <p>Av. Caseros 3039, Piso 2, CP 1264, Parque Patricios, CABA</p>
         </div>
     </footer>
+    <div class="filtro-productos-hp">
+        <p id="filtro-productos-hp-id">Ordenar por</p>
+        <p>Más relevantes</p>
 
 
-    <script src="index.js"></script>
+        <script src="index.js"></script>
 </body>
 
 </html>
