--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
             <div class="categorias">
                 <div class="title">
                     <a href="#">
-                        <p>Tiendas oficiales</p>
+                        <p id="tiendas-oficiales">Tiendas oficiales</p>
                     </a>
                     <h3>HP TIENDA OFICIAL</h3>
-                    <p>272 result</p>
+                    <p id="result">272 result</p>
                 </div>
                 <div class="llegan-hoy">
                     <p>Llegan hoy</p>
