arreglo de detalles

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <ul>
                         <li class="nav-menu-item">
                             <a href="#">
-                                <img src="img/aquí.png" alt="Ubicación" class="ubicacion-icono">
+                                <img src="img/aqui.png" alt="Ubicación" class="ubicacion-icono">
                             </a>
                             <a href="#" class="enviar-capital">
                                 <span class="nav-menu-cp-send">Enviar a</span>
@@ -63,11 +63,13 @@
 
 
 
-                <div class="usuarios">
-                    <li class="nav-menu-usuarios"><a href="#" class="nav-menu-usuarios-link">Creá tu cuenta</a></li>
-                    <li class="nav-menu-usuarios"><a href="#" class="nav-menu-usuarios-link">Ingresá</a></li>
-                    <li class="nav-menu-usuarios"><a href="#" class="nav-menu-usuarios-link">Mis compras</a></li>
-                    <a href="#"><img src="img/carrito.png" alt="Carrito de compras" class="carrito"></a>
+                <div>
+                    <ul class="usuarios">
+                        <li class="nav-menu-usuarios"><a href="#" class="nav-menu-usuarios-link">Creá tu cuenta</a></li>
+                        <li class="nav-menu-usuarios"><a href="#" class="nav-menu-usuarios-link">Ingresá</a></li>
+                        <li class="nav-menu-usuarios"><a href="#" class="nav-menu-usuarios-link">Mis compras</a></li>
+                        <li><a href="#"><img src="img/carrito.png" alt="Carrito de compras" class="carrito"></a></li>
+                    </ul>
                 </div>
             </div>
         </div>
